--- a/styles/crowdstrike/catppuccin.user.css
+++ b/styles/crowdstrike/catppuccin.user.css
@@ -262,6 +262,11 @@
 		@sapphire: #209fb5;
 		@blue: #1e66f5;
 		@lavender: #7287fd;
+		@purple: #9a4bff;
+		@turquoise: #26c3a3;
+		@lime: #7fbf20;
+		@coral: #ff5e50;
+		@indigo: #4848a3;
 		@text: #4c4f69;
 		@subtext1: #5c5f77;
 		@subtext0: #6c6f85;
@@ -291,6 +296,11 @@
 		@sapphire: #85c1dc;
 		@blue: #8caaee;
 		@lavender: #babbf1;
+		@purple: #9d79d6;
+		@turquoise: #63e6be;
+		@lime: #b8e994;
+		@coral: #ff8e72;
+		@indigo: #6667ab;
 		@text: #c6d0f5;
 		@subtext1: #b5bfe2;
 		@subtext0: #a5adce;
@@ -320,6 +330,11 @@
 		@sapphire: #7dc4e4;
 		@blue: #8aadf4;
 		@lavender: #b7bdf8;
+		@purple: #9d79d6;
+		@turquoise: #63e6be;
+		@lime: #b8e994;
+		@coral: #ff8e72;
+		@indigo: #6667ab;
 		@text: #cad3f5;
 		@subtext1: #b8c0e0;
 		@subtext0: #a5adcb;
@@ -349,6 +364,11 @@
 		@sapphire: #74c7ec;
 		@blue: #89b4fa;
 		@lavender: #b4befe;
+		@purple: #9d79d6;
+		@turquoise: #63e6be;
+		@lime: #b8e994;
+		@coral: #ff8e72;
+		@indigo: #6667ab;
 		@text: #cdd6f4;
 		@subtext1: #bac2de;
 		@subtext0: #a6adc8;
